# Loop-Assignment

./: aws  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 1_create_store_status_table.py  2_create_store_hours_table.py  3_create_store_time_zone_table.py  4_create_report_table.py
app/: api.py  db.py  main.py  models.py
